--- a/portfolio.html
+++ b/portfolio.html
@@ -313,7 +313,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+   <footer class="footer">
       <div class="footer-wrap container">
         <div class="footer-left">
           <a class="footer-link logo link" href="./index.html"
@@ -379,7 +379,22 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-form-right">
+          <p class="footer-form-title">Subscribe</p>
+          <form class="footer-form">
+            <label aria-label="footer email input" class="footer-label">
+              <input type="email" name="footer-mail" class="footer-input" placeholder="E-mail"  />
+            </label>
+            <button type="submit" class="footer-form-btn">Subscribe
+              <svg class="footer-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-footer-subscr"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
   </body>
 </html>
