--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                 name="user-name"
                 id="user-name"
               />
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-modal-user-name"></use>
               </svg>
             </div>
@@ -644,28 +644,28 @@
           </div>
 
           <div class="modal-field">
-            <label for="user-text" class="modal-label"
+            <label for="user-comment" class="modal-label"
               ><span>Comment</span></label
             >
             <textarea
-              name="user-text"
-              id="user-text"
+              name="user-comment"
+              id="user-comment"
               class="modal-comment"
               placeholder="Text input"
             ></textarea>
           </div>
 
-          <div class="modal-field">
+          <div class="modal-field check-field">
             <input
               type="checkbox"
-              id="policy"
-              name="policy"
+              id="user-privacy"
+              name="user-privacy"
               value="true"
               class="modal-check visually-hidden"
             />
 
-            <label for="policy" class="modal-check-text">
-              <span>
+            <label for="user-privacy" class="modal-check-text">
+              <span class="modal-check-icon">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
