--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
             </div>
           </div>
 
-          <div class="modal-field">
+          <div class="modal-field comment-field">
             <label for="user-comment" class="modal-label"
               ><span>Comment</span></label
             >
